# boanoarch

./: .gitignore  README.md  test_using_boa.sh  test_using_conda.sh
package/: pyproject.toml
package/boa_tester/: __init__.py
package/boa_tester/tests/: test_something.py
package/recipe/: meta.yaml  recipe.yaml
